--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Landing_page_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Landing_page_admin.html
@@ -6,7 +6,8 @@
       <h1 class="w3-xxxlarge w3-text-red"><b>Bienvenido al sistema de evaluación</b></h1>
       <hr style="width:50px;border:5px solid red" class="w3-round">
       <p>
-        <h3>Seleccione alguna sección para comenzar
+        <h3>Seleccione alguna sección para comenzar</h3>
+
       </p>
       </h2>
       <i class="far fa-arrow-alt-circle-left" style="font-size:300%"></i>
