--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Evaluaciones_admin.html
@@ -108,12 +108,14 @@
         <!-- botones de ver y modificar evaluacion-->
 
 
-        <!-- ver evaluacion -->
-        <button class="w3-button w3-large w3-red w3-round" type="submit">Ver</button>
-        <!-- modificar evaluacion -->
-        <button onclick="document.getElementById('modificar_{{ o.evaluacion.id }}').style.display='block'"
-                class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar
-        </button>
+        <form action="{% url 'ficha_evaluacion_admin' o.evaluacion.id %}">
+            <!-- ver evaluacion -->
+            <button class="w3-button w3-large w3-red w3-round" type="submit">Ver</button>
+            <!-- modificar evaluacion -->
+            <button onclick="document.getElementById('modificar_{{ o.evaluacion.id }}').style.display='block'"
+                    class="w3-button w3-large w3-red w3-margin-left w3-round">Modificar
+            </button>
+        </form>
 
 
 
@@ -141,7 +143,11 @@
                             <input class="w3-input w3-border w3-margin-bottom" type="date"
                                    value="{% if o.evaluacion.fechaInicio.year < 10 %}000
 
+
+
                                        {{ o.evaluacion.fechaInicio.year }}{% elif  o.evaluacion.fechaInicio.year < 100 %}00
+
+
 
                                        {{ o.evaluacion.fechaInicio.year }}{% elif  o.evaluacion.fechaInicio.year < 1000 %}0{{ o.evaluacion.fechaInicio.year }}{% else %}{{ o.evaluacion.fechaInicio.year }}{% endif %}-{% if o.evaluacion.fechaInicio.month < 10 %}0{{ o.evaluacion.fechaInicio.month }}{% else %}{{ o.evaluacion.fechaInicio.month }}{% endif %}-{% if o.evaluacion.fechaInicio.day < 10 %}0{{ o.evaluacion.fechaInicio.day }}{% else %}{{ o.evaluacion.fechaInicio.day }}{% endif %}"
                                    placeholder="Fecha de inicio" name="inicio" required>
@@ -150,7 +156,11 @@
                             <input class="w3-input w3-border" type="date" placeholder="Fecha Termino"
                                    value="{% if o.evaluacion.fechaTermino.year < 10 %}000
 
+
+
                                        {{ o.evaluacion.fechaTermino.year }}{% elif  o.evaluacion.fechaTermino.year < 100 %}00
+
+
 
                                        {{ o.evaluacion.fechaTermino.year }}{% elif  o.evaluacion.fechaTermino.year < 1000 %}0{{ o.evaluacion.fechaTermino.year }}{% else %}{{ o.evaluacion.fechaTermino.year }}{% endif %}-{% if o.evaluacion.fechaTermino.month < 10 %}0{{ o.evaluacion.fechaTermino.month }}{% else %}{{ o.evaluacion.fechaTermino.month }}{% endif %}-{% if o.evaluacion.fechaTermino.day < 10 %}0{{ o.evaluacion.fechaTermino.day }}{% else %}{{ o.evaluacion.fechaTermino.day }}{% endif %}"
                                    name="termino" required>
