--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/evaluacion_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/evaluacion_admin.html
@@ -89,13 +89,13 @@
         <!--Aqui van los bloques de cada criterio de la rubrica-->
         {% for asp in aspecto %}
             <div class="w3-panel  w3-margin-bottom" id="criterios">
-                <ul class="w3-ul w3-light-grey w3-center w3-card-4">
-                    <li class="w3-red w3-xlarge w3-padding-32">id="{{ asp }}" <i class="far fa-check-circle"></i></li>
+                <ul class="w3-ul w3-light-grey w3-center w3-card-4" id="{{ asp }}">
+                    <li class="w3-red w3-xlarge w3-padding-32" > {{ asp }} <i class="far fa-check-circle"></i></li>
 
                     {% for crit in criterios %}
                         {% if forloop.parentloop.counter == forloop.counter %}
                             {% for ble in crit %}
-                                <li class="opcion w3-padding-16">{{ ble }} </li>
+                                <li class="opcion w3-padding-16" id="{{ forloop.counter }}" onclick="elegir_aspecto(this.id,this.parentNode.id)">{{ ble }} </li>
                             {% endfor %}
                         {% endif %}
 
@@ -124,6 +124,9 @@
     <script>
         var grupo = "";
         var presentador = "";
+        //diccionario para guardar el valor de los atributos
+        var dict = {};
+
 
         function guardar_grupo(id) {
             grupo = document.getElementById(id).id;
@@ -151,9 +154,12 @@
             tag.removeChild(element);
         }
         //para guardar que aspecto fue elegido
-        function elegir_aspecto(id){
-
+        function elegir_aspecto(valor,aspecto){
+            console.log("padre= "+aspecto+ " "+ "hijo= "+valor);
+            dict[aspecto]=valor;
+            console.log(dict);
         }
+
     </script>
     <!-- End page content -->
 
