--- a/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
+++ b/EvPresentaciones/templates/EvPresentaciones/Admin_interface/Rubricas_admin.html
@@ -21,13 +21,10 @@
 
 
         <button onclick="myFunction({{ a.0 }})" class="w3-btn w3-red w3-block w3-margin" style="width: 75%">
-            <h3>
-                {{ a.1 }}</h3> <!-- Nombre -->
+            <h3> {{ a.1 }} v{{ a.2}} </h3> <!-- Nombre y versión -->
         </button>
 
         <div id={{ a.0 }} class="w3-hide w3-container w3-pale-red w3-center w3-padding-large w3-margin" style="width: 75%">
-            <p>Versión: {{ a.2 }}</p>
-
             <div class="w3-container">
                 <form action={% url 'ver_detalle' nombre=a.1 version=a.2 %} class="inline">
                     {% csrf_token %}
