--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_crear.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_crear.html
@@ -71,7 +71,7 @@
             </table>
         </div>
 
-        <input id"csv-text-id" type="text" style="display: block;" name="csv-text" value="">
+        <input id"csv-text-id" type="text" style="display: none;" name="csv-text" value="">
 
         <div class="w3-row">
             <button type="button" class="button1" onclick="saveRubrica();">Guardar rúbrica <i class="far fa-save"></i>
