Se añaden múltiples validaciones a los campos de tiempo en las rúbricas

--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_crear.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_crear.html
@@ -97,6 +97,7 @@
         }
 
         function validarRubrica() {
+            // Validaciones de campos vacíos
             var nombre = document.getElementsByName("nombre-rubrica")[0];
             if (nombre.value == "") {
                 alert("Debe ingresar un nombre de Rúbrica");
@@ -112,16 +113,68 @@
                 alert("Debe ingresar un tiempo máximo");
                 return false
             }
-            if (tmax.value < tmin.value) {
-                alert("Tiempo máximo debe ser mayor que el tiempo minimo");
-                return false
-            }
             var ver = document.getElementsByName("version")[0];
             if (ver.value == "") {
                 alert("Debe ingresar una versión de la rúbrica");
                 return false
             }
+
+            /************* Validaciones de tiempo **************/
+            split_Max = tmax.value.split(":")
+            split_Min = tmin.value.split(":")
+
+            // Que tenga un sólo ':'
+            if(split_Min.length != 2){
+                alert("Ingresar el tiempo mínimo en el formato solicitado: mm:ss");return false;
+            }
+            if(split_Max.length != 2){
+                alert("Ingresar el tiempo máximo en el formato solicitado: mm:ss");return false;
+            }
+            // Que sólo tenga números
+            var regex = /^\d+$/;
+            if(!regex.test(split_Min[0]) | !regex.test(split_Min[1])){
+                alert("Caracteres inválidos en tiempo mínimo");
+                return false;
+            }
+            if(!regex.test(split_Max[0]) | !regex.test(split_Max[1])){
+                alert("Caracteres inválidos en tiempo máximo");
+                return false;
+            }
+            // Que los números de los tiempos esten en rangos correctos
+            if(parseInt(split_Min[0]) < 0 | parseInt(split_Min[0]) > 59){
+                alert("El rango de minutos va entre 0 y 59, modificar tiempo mínimo");return false;
+            }
+            if(parseInt(split_Min[1]) < 0 | parseInt(split_Min[1]) > 59){
+                alert("El rango de segundos va entre 0 y 59, modificar tiempo mínimo");return false;
+            }
+            if(parseInt(split_Max[0]) < 0 | parseInt(split_Max[0]) > 59){
+                alert("El rango de minutos va entre 0 y 59, modificar tiempo máximo");return false;
+            }
+            if(parseInt(split_Max[1]) < 0 | parseInt(split_Max[1]) > 59){
+                alert("El rango de segundos va entre 0 y 59, modificar tiempo máximo");return false;
+            }
+
+            // Que el tiempo max sea mayor al min
+            if (parseInt(split_Min[0]) > parseInt(split_Max[0])){ // Minutos del tmin superan a minutos del tmax
+                alert("Tiempo máximo debe ser mayor que el tiempo minimo");
+                return false
+            }else if (parseInt(split_Min) == parseInt(split_Max)){
+                if(parseInt(split_Min[1]) > parseInt(split_Max[1])){ // Segundos del tmin superan a segundos del tmax
+                    alert("Tiempo máximo debe ser mayor que el tiempo minimo");
+                    return false
+                }else if(parseInt(split_Min[1]) == parseInt(split_Max[1])){
+                    alert("Tiempo máximo debe ser diferente que el tiempo minimo");
+                    return false
+                }
+            }
+            
             return true;
+        }
+
+        function IsANumber(strNumber) {
+            var regExp = new RegExp("^\\d+$");
+            var isValid = regExp.test(strNumber); // or just: /^\d+$/.test(strNumber);
+            return isValid;
         }
 
         function table2JSList() {
