--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_eliminar_definitivo.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/FichaRubrica_eliminar_definitivo.html
@@ -6,8 +6,7 @@
         <hr style="width:50px;border:5px solid red" class="w3-round">
     </div>
 
-    <button href="{% url 'rubricas_admin' %}"
-    class="w3-button w3-large w3-margin-right w3-red w3-left w3-round">Volver a Rúbricas</button>
+    <a href="{% url 'rubricas_admin' %}" class="w3-button w3-large w3-margin-right w3-red w3-left w3-round">Volver</a>
 
 
 
