--- a/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/Rubrica_guardada.html
+++ b/EvPresentaciones/templates/EvPresentaciones/FichasRubricas/Rubrica_guardada.html
@@ -6,6 +6,7 @@
         <hr style="width:50px;border:5px solid red" class="w3-round">
     </div>
 
+    <a href="{% url 'rubricas_admin' %}" class="w3-button w3-large w3-margin-right w3-red w3-left w3-round">Volver</a>
 
     <!-- End page content -->
     {% endblock %}
