--- a/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
+++ b/EvPresentaciones/templates/EvPresentaciones/BASE/base.html
@@ -1,57 +1,63 @@
 {% load static %}
 <!DOCTYPE html>
 <head>
-<html lang="es">
-<title>Plataforma de evaluación-Cursos</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="{% static 'EvPresentaciones/style.css' %}">
-<link rel="stylesheet" href="{% static 'EvPresentaciones/w3.css' %}">
-<link rel="stylesheet" href="{% static 'EvPresentaciones/ficharubrica.css' %}">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-  integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-</head>
+    <html lang="es">
+    <title>Plataforma de evaluación-Cursos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{% static 'EvPresentaciones/style.css' %}">
+    <link rel="stylesheet" href="{% static 'EvPresentaciones/w3.css' %}">
+    <link rel="stylesheet" href="{% static 'EvPresentaciones/ficharubrica.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    </head>
 
 <body>
 
-  <!-- Sidebar/menu -->
-  <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
-    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
+<!-- Sidebar/menu -->
+<nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;"
+     id="mySidebar"><br>
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
+       style="width:100%;font-size:22px">Close Menu</a>
     <!--Profile image -->
     <div class="w3-container">
-      <p class="w3-center"><img src="{% static 'EvPresentaciones/images/avatar3.png' %}" class="w3-circle" style="height:200px;width:200px" alt="Avatar"></p>
-      <h3 class="w3-padding-64" style="text-align: center"> <b>{{  user.get_username}} </b> </h3>
+        <p class="w3-center"><img src="{% static 'EvPresentaciones/images/avatar3.png' %}" class="w3-circle"
+                                  style="height:200px;width:200px" alt="Avatar"></p>
+        <h3 class="w3-padding-64" style="text-align: center"><b>{{ user.get_username }} </b></h3>
     </div>
     <!--Navigation Links -->
     <div class="w3-bar-block">
-      <a href="{% url 'landing_page_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
-      <a href="{% url 'cursos_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
-      <a href="{% url 'evaluadores_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
-      <a href="{% url 'rubricas_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
-      <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
-      <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
+        <a href="{% url 'landing_page_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Home</a>
+        <a href="{% url 'cursos_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cursos</a>
+        <a href="{% url 'evaluadores_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluadores</a>
+        <a href="{% url 'rubricas_admin' %}" onclick="w3_close()"
+           class="w3-bar-item w3-button w3-hover-white">Rúbricas</a>
+        <a href="{% url 'evaluaciones_admin' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Evaluaciones</a>
+        <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
     </div>
-  </nav>
+</nav>
 
-  <!-- Top menu on small screens -->
-  <header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
+<!-- Top menu on small screens -->
+<header class="w3-container w3-top w3-hide-large w3-red w3-xlarge w3-padding">
     <a href="javascript:void(0)" class="w3-button w3-red w3-margin-right" onclick="w3_open()">☰</a>
     <span>{{ user.get_username }} </span>
-  </header>
+</header>
 
-  <!-- Overlay effect when opening sidebar on small screens -->
-  <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+<!-- Overlay effect when opening sidebar on small screens -->
+<div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu"
+     id="myOverlay"></div>
 
-  <!-- !PAGE CONTENT! -->
-  <div class="w3-main" style="margin-left:340px;margin-right:40px">
-    {% block contenido%}
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:340px;margin-right:40px">
+    {% block contenido %}
     {% endblock %}
 
-  </div>
+</div>
 
-    <script>
+<script>
     // Script to open and close sidebar
     function w3_open() {
         document.getElementById("mySidebar").style.display = "block";
@@ -62,6 +68,7 @@
         document.getElementById("mySidebar").style.display = "none";
         document.getElementById("myOverlay").style.display = "none";
     }
+
     // Modal Image Gallery
     function onClick(element) {
         document.getElementById("img01").src = element.src;
@@ -69,7 +76,7 @@
         var captionText = document.getElementById("caption");
         captionText.innerHTML = element.alt;
     }
-    </script>
+</script>
 
 </body>
 
